# PrimedGun

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
.github/workflows/: build-appimage.yml  build-windows.yml
CMake/: PrimeGunSeedUserDefaults.cmake  ScmRevGen.cmake
Data/: org.PrimedGun.PrimedGun.metainfo.xml.in
Data/Sys/Profiles/Hotkeys/: default.ini
Data/User/Cache/: GM8E01.uidcache  gamelist.cache
Data/User/Cache/Shaders/: D3D-gs-6461FF45.cache  D3D-specialized-ps-GM8E01-6461FF45.cache  D3D-specialized-vs-GM8E01-6461FF45.cache  D3D-uber-vs-6461FF45.cache  Vulkan-gs-6C6FFF45.cache  Vulkan-uber-vs-6C6FFF45.cache
Data/User/Config/: Dolphin.ini  GCPadNew.ini  GFX.ini  Hotkeys.ini  Logger.ini  TimePlayed.ini  WiimoteNew.ini
Data/User/Config/GraphicMods/: GMSE04.json  GTSE4F.json  RMCE01.json
Data/User/Config/Profiles/GCPad/: GCPadNew.ini  PrimedGun.ini
Data/User/Config/Profiles/Hotkeys/: hotkeys.ini.primedgun.bak
Data/User/Config/Profiles/Wiimote/: gcwii.ini  test.ini
Data/User/Dump/: bad_vs_Vulkan_0.txt  bad_vs_Vulkan_1.txt  bad_vs_Vulkan_10.txt  bad_vs_Vulkan_100.txt  bad_vs_Vulkan_101.txt  bad_vs_Vulkan_102.txt  bad_vs_Vulkan_103.txt  bad_vs_Vulkan_104.txt  bad_vs_Vulkan_105.txt  bad_vs_Vulkan_106.txt  bad_vs_Vulkan_107.txt  bad_vs_Vulkan_108.txt  bad_vs_Vulkan_109.txt  bad_vs_Vulkan_11.txt  bad_vs_Vulkan_110.txt  bad_vs_Vulkan_111.txt  bad_vs_Vulkan_112.txt  bad_vs_Vulkan_113.txt  bad_vs_Vulkan_114.txt  bad_vs_Vulkan_115.txt  bad_vs_Vulkan_116.txt  bad_vs_Vulkan_117.txt  bad_vs_Vulkan_118.txt  bad_vs_Vulkan_119.txt  bad_vs_Vulkan_12.txt  bad_vs_Vulkan_120.txt  bad_vs_Vulkan_121.txt  bad_vs_Vulkan_122.txt  bad_vs_Vulkan_123.txt  bad_vs_Vulkan_124.txt  bad_vs_Vulkan_125.txt  bad_vs_Vulkan_126.txt  bad_vs_Vulkan_127.txt  bad_vs_Vulkan_128.txt  bad_vs_Vulkan_129.txt  bad_vs_Vulkan_13.txt  bad_vs_Vulkan_130.txt  bad_vs_Vulkan_131.txt  bad_vs_Vulkan_132.txt  bad_vs_Vulkan_133.txt  (+336 more)
Data/User/Dump/Shaders/GM8E01/: 9e0b32f0-ps.txt
Data/User/GameSettings/: GM8E01.ini  GM8E01.ini.primedgun.bak
Data/User/GameSettingsVR/: GM8E01.ini  GM8E01.ini.primedgun.bak
Data/User/Load/PrimeGun/CannonTextures/default/: tex1_128x128_m_3c6ded49d64d30f2_14.dds
Data/User/Load/PrimeGun/CannonTextures/slot_1/: tex1_128x128_m_3c6ded49d64d30f2_14.dds  tex1_128x128_m_bec6d78ea7dd739e_14.dds  tex1_64x64_m_c7625e7ecd9cd5c2_14.dds
Data/User/Load/PrimeGun/CannonTextures/slot_2/: tex1_128x128_m_3c6ded49d64d30f2_14.dds  tex1_128x128_m_bec6d78ea7dd739e_14.dds
Data/User/Load/PrimeGun/CannonTextures/slot_3/: tex1_128x128_m_3c6ded49d64d30f2_14.dds  tex1_128x128_m_bec6d78ea7dd739e_14.dds  tex1_64x64_m_c7625e7ecd9cd5c2_14.dds
Data/User/Load/PrimeGun/CannonTextures/slot_4/: tex1_128x128_m_3c6ded49d64d30f2_14.dds  tex1_128x128_m_bec6d78ea7dd739e_14.dds  tex1_64x64_m_c7625e7ecd9cd5c2_14.dds
Data/User/Load/PrimeGun/CannonTextures/slot_5/: tex1_128x128_m_bec6d78ea7dd739e_14.dds  tex1_64x64_m_c7625e7ecd9cd5c2_14.dds
Data/User/Load/Textures/000_PrimeGunCannon/gameids/: GM8E01.txt
Data/User/Load/Textures/GM8E01/: desktop.ini
Flatpak/: org.DolphinEmu.dolphin-emu.yml  primedgun-wrapper
Source/Android/jni/: CMakeLists.txt
Source/Core/Core/: CMakeLists.txt  ConfigManager.cpp
Source/Core/Core/Config/: GraphicsSettings.cpp
Source/Core/Core/HW/: GCPadEmu.cpp
Source/Core/Core/PowerPC/Jit64/: Jit.cpp
Source/Core/Core/PrimeGun/: NativeRuntime.cpp  NativeRuntime.h  PPCTrace.cpp  PPCTrace.h
Source/Core/Core/PrimedGun/: NativeRuntime.cpp
Source/Core/DolphinQt/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MenuBar.cpp  MenuBar.h  RenderWidget.cpp  Settings.cpp
Source/Core/DolphinQt/Config/: GamecubeControllersWidget.cpp
Source/Core/DolphinQt/Config/Mapping/: MappingWindow.cpp  OpenXRWiimoteConfigSessionController.cpp  OpenXRWiimoteConfigSessionController.h
Source/Core/DolphinQt/GameList/: GameList.cpp
Source/Core/DolphinQt/QtUtils/: SetWindowDecorations.cpp  SetWindowDecorations.h
Source/Core/UICommon/: DBusUtils.cpp  UICommon.cpp
Source/Core/VideoBackends/Vulkan/: VulkanOpenXR.cpp
Source/Core/VideoCommon/: CMakeLists.txt  ShaderHunter.cpp  VertexManagerBase.cpp
Source/Core/VideoCommon/VR/: OpenXRManager.cpp  OpenXRUtilitySession.cpp  OpenXRUtilitySession.h
assets/gecko/: GM8E01_PrimedGun.ini
src/: dolphin_memory.h  gui.h  main.cpp  openvr_manager.h  settings.h  tracking_math.h
src/dolphin_hook/: GameTimingHooks.cpp  GameTimingHooks.h  GraphicsHooks.cpp  GraphicsHooks.h  HookRuntime.cpp  OpenXrHooks.cpp  VulkanHooks.cpp  VulkanHooks.h
src/hook_common/: HookLayout.h  PrimedGunShared.h
